Add current signal (icon and message)

--- a/MMM-Ecowatt.css
+++ b/MMM-Ecowatt.css
@@ -1,13 +1,13 @@
-.MMM-Ecowatt {
-    font-size: 16px;
-    text-align: left !important;
+.MMM-Ecowatt .title,
+.MMM-Ecowatt .signals {
+  padding-bottom: 10px;
 }
+
 .MMM-Ecowatt .signalTable {
     border-collapse: collapse !important;
 }
 .MMM-Ecowatt .signalTable tr {
     height: 15px;
-    border-top: 1px solid #000;
 }
 .MMM-Ecowatt .signalTable td {
     width: 20px;
@@ -18,13 +18,4 @@
 }
 .MMM-Ecowatt .signalHours td span {
     margin-left: -14px;
-}
-.MMM-Ecowatt .signalLoad1 {
-    background-color:  #02c09e;
-}
-.MMM-Ecowatt .signalLoad2 {
-    background-color:  #c05f0a;
-}
-.MMM-Ecowatt .signalLoad3 {
-    background-color:  #a4151f ;
 }
