--- a/MMM-Ecowatt.css
+++ b/MMM-Ecowatt.css
@@ -1,21 +1,34 @@
 .MMM-Ecowatt .title,
 .MMM-Ecowatt .signals {
-  padding-bottom: 10px;
+  margin-bottom: 10px;
 }
 
-.MMM-Ecowatt .signalTable {
-    border-collapse: collapse !important;
+.MMM-Ecowatt .timeline {
+	display: flex;
+	margin-top: 10px;
+	margin-bottom: 1.5em;
 }
-.MMM-Ecowatt .signalTable tr {
-    height: 15px;
+
+.MMM-Ecowatt .timeline .signal {
+	height: 1em;
+	position: relative;
+	flex: 1 1 0%;
+	border-right: 1px solid #000000;
 }
-.MMM-Ecowatt .signalTable td {
-    width: 20px;
+
+.MMM-Ecowatt .timeline .signal:first-child {
+	border-left: 1px solid #000000;
+  border-top-left-radius: 2em;
+  border-bottom-left-radius: 2em;
 }
-.MMM-Ecowatt .signalHours td {
-    font-size: 14px;
-    text-align: left !important;
+
+.MMM-Ecowatt .timeline .signal:last-child {
+  border-top-right-radius: 2em;
+  border-bottom-right-radius: 2em;
 }
-.MMM-Ecowatt .signalHours td span {
-    margin-left: -14px;
+
+.MMM-Ecowatt .timeline .signal .hour {
+	position: absolute;
+	top: 1.5em;
+	left: -0.6em;
 }
