reduce text size

--- a/MMM-Ecowatt.njk
+++ b/MMM-Ecowatt.njk
@@ -1,5 +1,5 @@
 {% if loaded %}
-	<div class="normal medium title">
+	<div class="small title bright">
 		{% if config.useColorLegend %}
 			<span class="fa fa-solid fa-bolt dimmed" style="color: {{ signals[0].dvalue | level2color }};"></span>
 		{% else %}
