--- a/MMM-Ecowatt.css
+++ b/MMM-Ecowatt.css
@@ -14,6 +14,14 @@
 	position: relative;
 	flex: 1 1 0%;
 	border-right: 1px solid #000000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.MMM-Ecowatt .timeline .signal span {
+  color: #ffffff;
+  font-size: .75em;
 }
 
 .MMM-Ecowatt .timeline .signal:first-child {
